# frontier

./: .gitignore  LICENSE  LICENSE-APACHE  LICENSE-CARGO.spdx.json  LICENSE.spdx  LICENSE.spdx.json  LOGS.md  MANUAL.md  NOTICE  NOTICE-CARGO  NOTICES-CARGO  PROJECT.md  README.md  ROADMAP.md  about-cargo.hbs  about.toml  back.bat  front.bat  frontier.bat  frontier.toml
.frontier/: Cargo.toml  build.rs
.frontier/.cargo/: config.toml
.frontier/src/: assets.rs  backend.rs  build.rs  config.rs  core.rs  manager.rs  system.rs  window.rs
.github/workflows/: cargo-about.yml  cargo-license.yml  cargo-update.yml  notices-cargo.yml  release.yml  spdx.yml  spx.yml  update-cargo.yml
LICENSE/: LICENSE-CARGO.spdx.json  LICENSE.spdx.json  NOTICE-CARGO
cli/windows/: back.bat  front.bat  frontier.bat
docs/: LOGS.md  MANUAL.md  README.md
frontier/: Cargo.toml  build.rs
frontier/.cargo/: config.toml
frontier/cargo/: config.toml
frontier/src/: assets.rs  backend.rs  core.rs  manager.rs
