[package]
name = "frontier"
version = "0.1.0"
edition = "2021"

# --- CAMINHOS ATUALIZADOS ---

[[bin]]
name = "manager"
path = "src/manager.rs"  # Agora na raiz do src

[[bin]]
name = "frontier_core"
path = "src/core.rs"     # Agora na raiz do src

# --- DEPENDÊNCIAS ---

[dependencies]
wry = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
rust-embed = "6.8"
uuid = { version = "1.0", features = ["v4"] }
walkdir = "2"
image = "0.24"
regex = "1.10"
evalexpr = "11.3"
notify = "6.1"
winapi = { version = "0.3", features = ["wincon"] }

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
